# tavily-hikari

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  PERSONAL.md  PRODUCT.md  README.en.md  README.md  README.zh-CN.md  package.json
.github/: quality-gates.json
.github/scripts/: check_quality_gates.py  detect_docs_pages_changes.py  release-mcp-billing-smoke.sh  release_failure_notifier.py  (+1 more)
docs/: high-anonymity-proxy.md  quota-design.md  tavily-http-api-proxy.md
docs-site/: rspress.config.ts
docs/specs/: README.md
scripts/: capture-rankings-evidence.mjs  capture_admin_pressure_storybook.mjs  capture_brand_evidence.mjs  ci_backend_test_manifest.json  ci_backend_tests.py  container-health-contract-smoke.sh  docker-entrypoint.sh  docker-healthcheck.sh  export-live-db-snapshot-to-testbox.sh  ha-outbox-maintenance.sh  install-hooks.sh  install-tvly-hikari.sh  prune_rustc_artifacts.py  run-ha-testbox-suite.sh  start-web-demo.sh  test-worktree-bootstrap.sh  tvly-hikari  worktree-bootstrap.sh  worktree-setup.sh
skills/: README.md
src/: admin_mcp_session_bindings.rs  admin_token_filters.rs  analysis.rs  backend_time.rs  forward_proxy.rs  ha.rs  lib.rs  linuxdo_credit_recharge.rs  main.rs  models.rs  runtime_logging.rs  upstream_privacy.rs  upstream_privacy_status.rs
tests/: mcp_billing_regression.rs  mcp_session_affinity_e2e.rs  request_kind_canonical_backfill.rs  rust_source_line_budgets.rs  server_http_contract.rs  test_release_failure_notifier.py  test_release_smoke_sqlite_check.py  test_tavily_hikari_agent_skills.py  test_tvly_hikari_cli.py
web/: admin.html  console.html  index.html  login.html  package.json  registration-paused.html  tailwind.config.ts  tsconfig.app.json  vite.config.ts
(+599 files in other folders)
