[package]
name = "tavily-hikari"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "http1", "tokio"] }
bytes = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
base64 = "0.22"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "sync", "process", "time", "net", "test-util"] }
url = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
tower = { version = "0.4", features = ["util"] }
nanoid = "0.4"
urlencoding = "2.1"
html-escape = "0.2"
mime_guess = "2"
rand = { version = "0.8", features = ["std", "std_rng"] }
async-stream = "0.3"
futures-util = "0.3"
rust-mcp-schema = "0.7.5"
argon2 = { version = "0.5", features = ["std"] }
libc = "0.2"
httpdate = "1"
ring = "0.17"
md5 = "0.7"
data-encoding = "2"
totp-rs = { version = "5.7", features = ["qr", "zeroize"] }
zstd = "0.13"
tracing = "0.1"
log = "0.4"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "tracing-log"] }

[target.'cfg(not(target_env = "musl"))'.dependencies]
reqwest = { version = "0.12", features = ["stream", "json", "socks"] }

[target.'cfg(target_env = "musl")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls-webpki-roots", "socks", "stream", "system-proxy"] }
